[metadata]
name = sectionary
version = 0.0.1
author = Greg Salomons
author_email = smokey.salomons@gmail.com
description = Process text streams in sections and sub-sections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GregSal/sectionary
project_urls =
    Bug Tracker = https://github.com/GregSal/sectionary/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent
		Topic :: Utilities
		Topic :: Text Processing :: Filters
		Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src